--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,22 @@
 
 html,
 body,
+
 .wrapper {
-  height: 100%;
+  /*height: 100%;*/
   margin: 0;
   padding: 0;
+  
 }
 
 body {
   font-family: sans-serif;
   background-color: #C6F8F8;
+  margin: 0 auto;
+}
+
+.check-boxes {
+  text-align: center;
 }
 
 .checkbox {
@@ -22,10 +29,6 @@ body {
   align-content: center;
 }
 
-.pw-text {
-  text-align: center;
-  margin-bottom: 50px;
-}
 
 .wrapper {
   padding-top: 30px;
@@ -33,7 +36,18 @@ body {
   padding-right: 20px;
 }
 
+.enterChar label{
+  display: block;
+  text-align: center;
+  float: center;
+}
 
+.enterChar input {
+  display: block;
+  text-align: center;
+  align-content: center;
+  margin: 20px auto;
+}
 
 header {
   text-align: center;
@@ -42,8 +56,13 @@ header {
   color: hsl(206, 17%, 28%);
 }
 
+ul {
+  margin-left: 40%;
+  text-align: left;
+}
+
 .card {
-  background-color: #33EEFF(0, 0%, 100%);
+  background-color: #408BCF(0, 0%, 100%);
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
@@ -52,6 +71,10 @@ header {
   margin: 0 auto;
   max-width: 800px;
   padding: 30px 40px;
+}
+
+.card-header h2 {
+  text-align: center;
 }
 
 .card-header::after {
